# greet2

./: CMakeLists.txt  README.md
src/: greet2.cpp
usage/: CMakeLists.txt  main.cpp
